@@ -1,5 +1,6 @@
 Changes for 1.7.0
 
+ - [ZBX-298] fix missing item parameter descriptions and examples; unify active/passive item descriptions (Richlv)
  - [DEV-420] fixed "Add host" operation for auto-discovered devices (Sasha)
  - [DEV-423] added filtering of the Windows Event Log by Type, Source and Event ID on the server side (Dmitry)
  - [DEV-423] added filtering of the Windows Event Log by Type, Source and Event ID on the agent side (Dmitry)
